--- a/templates/search.html
+++ b/templates/search.html
@@ -22,16 +22,24 @@ Last name:<br>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 <div align="center">
 <h2 id="heading">Loading </h2>
-{% for item in data %}</br></br>
-{{ item }}
+
+{% for item in data %}
+{% if item['basic_info'] %}
+<div style="outline-style: solid; width:80%">
+<h3>Basic information:</h3>
+{{ ' '.join(item['basic_info']) }}
+<h3>Relatives:</h3>
+{{ ', '.join(item['relatives']) }}
+</div>
+{% endif %}
 {% endfor %}
 </div>
-
 </body>
 <script>
 $(document).ready(function() {
-    $("#heading").text("Basic Information");
+    $("#heading").text("");
 });
 </script>
 </html>
+
 
