results are part of div

--- a/templates/search.html
+++ b/templates/search.html
@@ -7,14 +7,22 @@
   <title>Search</title>
 </head>
 <body style="background-color:#00233E">
-  <form style="width:20%; padding:20px; margin-left:auto; margin-right:auto;" method="POST">
-    <fieldset class="form-group">
-      <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
-    </fieldset>
-    <fieldset class="form-group">
-      <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
-    </fieldset>
-    <input id="sub" class="btn btn-default" value="Submit" type="submit"></form>
-  </form>
+  <div style="margin:20px;border-radius: 5px; padding: 10px; background-color:white;">
+    <h1>Public Information</h1>
+    There is a shocking amount of information publicly available. Knowing someone's name and location
+    is often all you need to find specific details about someone. Type your first and last name into the
+    form below to see if we can find information about you.
+
+    <form style="width:20%; padding:20px; margin-left:auto; margin-right:auto;" method="POST">
+      <fieldset class="form-group">
+        <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
+      </fieldset>
+      <fieldset class="form-group">
+        <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
+      </fieldset>
+      <input id="sub" class="btn btn-default" value="Submit" type="submit"></form>
+    </form>
+  </div>
+
 </body>
 </html>
