--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -11,11 +11,18 @@
 #card_div {
   width: 300px;
   height: 200px;
-  margin: 24px 0;
-  padding: 16px;
+  margin: 5px;
+  margin-left:10px;
+  padding: 5px;
   overflow-y: scroll;
   float:left;
-  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+}
+
+#card_div:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 </style>
 <body style="background-color:#00233E">
