--- a/templates/search.html
+++ b/templates/search.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>Search</title>
-</head>
-<body style="background-color:#00233E">
-  <div style="margin:20px;border-radius: 5px; padding: 10px; background-color:white;">
-    <h1>Public Information</h1>
-    There is a shocking amount of information publicly available. Knowing someone's name and location
-    is often all you need to find specific details about someone. Type your first and last name into the
-    form below to see if we can find information about you.
-
-    <form style="width:20%; padding:20px; margin-left:auto; margin-right:auto;" method="POST">
-      <fieldset class="form-group">
-        <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
-      </fieldset>
-      <fieldset class="form-group">
-        <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
-      </fieldset>
-      <input id="sub" class="btn btn-default" value="Submit" type="submit"></form>
-    </form>
-  </div>
-
-</body>
+<html>
+   <head>
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+      <title>Search</title>
+   </head>
+   <body style="background-color:#00233E">
+      <div style="margin:20px;border-radius: 5px; padding: 10px; background-color:white;">
+         <h1>Public Information</h1>
+         There is a shocking amount of information publicly available. Knowing someone's name and location
+         is often all you need to find specific details about someone. Type your first and last name into the
+         form below to see if we can find information about you.
+         <form style="width:20%; padding:20px; margin-left:auto; margin-right:auto;" method="POST">
+            <fieldset class="form-group">
+               <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
+            </fieldset>
+            <fieldset class="form-group">
+               <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
+            </fieldset>
+            <input id="sub" class="btn btn-default" value="Submit" type="submit">
+         </form>
+         </form>
+      </div>
+   </body>
 </html>
