took backgroundnd out

--- a/templates/search.html
+++ b/templates/search.html
@@ -7,8 +7,8 @@
       <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
       <title>Search</title>
    </head>
-   <body style="background-color:#00233E">
-      <div style="margin:20px;border-radius: 5px; padding: 10px; background-color:white;">
+   <body style="">
+      <div style="margin:20px;border-radius: 5px; padding: 10px; outline-style: solid; outline-color: grey; outline-width: 1px;">
          <h1>Public Information</h1>
          There is a shocking amount of information publicly available. Knowing someone's name and location
          is often all you need to find specific details about someone. Type your first and last name into the
