--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -26,9 +26,17 @@
    <body style="">
       <div style="margin:20px;border-radius: 5px; padding: 10px; background-color:white; outline-style: solid; outline-color: grey; outline-width: 1px;">
          <h1>Public Information</h1>
-         There is a shocking amount of information publicly available. Knowing someone's name and location
-         is often all you need to find specific details about someone. Type your first and last name into the
-         form below to see if we can find information about you.
+          <p>
+          Disclosing personal information on the internet can have devastating effects. Social networks can provide attackers
+          with information such as full name, DOB, hometown, relationship information, education, graduation dates, pet names,
+          interests, hobbies, and affiliations. This information can be used in a spear phishing attack to gain further
+          information about a target, as well as crafting targeted password attacks.
+          <br/>
+          <br/>
+          There is a shocking amount of information publicly available. Knowing someone's name and location
+          is often all you need to find specific details about someone. Type your first and last name into the
+          form below to see if we can find information about you.
+          </p>
          <form style="width:20%; padding:20px; margin-left:auto; margin-right:auto;" method="POST">
             <fieldset class="form-group">
                <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
@@ -76,11 +84,14 @@
          </div>
       </div>
       <div style="margin:20px;border-radius: 5px; padding: 10px; outline-style: solid; outline-color: grey; outline-width: 1px;">
-         <h1>Conclusion</h1>
-         Did you find any information that resembled yourself? Many people upload private information to social
-         networking sites. This information can be used in a social engineering attack to impersonate you and gain access
-         to your personal accounts. There are sites that aggregate publicly available information such as:
-         <a href="http://www.spokeo.com/">spokeo</a> and <a href="https://pipl.com/">pipl</a>.
+         <h1>Tips for Securing Personal Data</h1>
+         <ul>
+           <li>Minimize the use of personal information on your profiles that may be used for password verification or phishing attacks</li>
+           <li>Only invite people to your network that you know or have met, as opposed to friends of friends and strangers</li>
+           <li>Dispose of old computers and phones (any device with data) securely </li>
+           <li>Monitor phone applications and be mindful of social networking applications that use GPS to tell people where you are </li>
+           <li>For password security verification questions, us a password for all answers (rather than the answer to the specific question, like “What is your mother’s maiden name?”) </li>
+         </ul>
       </div>
    </body>
 </html>
