--- a/templates/search.html
+++ b/templates/search.html
@@ -10,9 +10,17 @@
    <body style="">
       <div style="margin:20px;border-radius: 5px; padding: 10px; outline-style: solid; outline-color: grey; outline-width: 1px;">
          <h1>Public Information</h1>
+         <p>
+         Disclosing personal information on the internet can have devastating effects. Social networks can provide attackers
+         with information such as full name, DOB, hometown, relationship information, education, graduation dates, pet names,
+         interests, hobbies, and affiliations. This information can be used in a spear phishing attack to gain further
+         information about a target, as well as crafting targeted password attacks.
+         <br/>
+         <br/>
          There is a shocking amount of information publicly available. Knowing someone's name and location
          is often all you need to find specific details about someone. Type your first and last name into the
          form below to see if we can find information about you.
+        </p>
          <form style="width:20%; padding:20px; margin-left:auto; margin-right:auto;" method="POST">
             <fieldset class="form-group">
                <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
