--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -152,7 +152,7 @@
                 </div>
 
                 <div class="card card-block">
-                   <h1>Public Information</h1>
+                   <h5>Public Information</h5>
                    <p>
                    Disclosing personal information on the internet can have devastating effects. Social networks can provide attackers
                    with information such as full name, DOB, hometown, relationship information, education, graduation dates, pet names,
@@ -165,15 +165,13 @@
                    form below to see if we can find information about you.
                   </p>
 
-                   <form method="POST">
-                      <fieldset class="form-group">
-                         <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
-                      </fieldset>
-                      <fieldset class="form-group">
-                         <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
-                      </fieldset>
-                      <input id="sub" class="btn btn-default" value="Submit" type="submit">
-                   </form>
+                  <form method="POST">
+                     <fieldset class="form-group" style="padding-bottom:10px;">
+                        <input name="firstname" type="text" class="form-control" placeholder="First Name" required>
+                        <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
+                     </fieldset>
+                     <input id="clickClick" value="Submit" type="submit">
+                  </form>
                 </div>
 
 
@@ -185,7 +183,7 @@
             </div>
         </div>
     </div>
-
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="static/js/tether.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
