added info added templates

--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -152,15 +152,30 @@
                 </div>
 
                 <div class="card card-block">
-                   <h5>Public Information</h5>
+                    <h5> Spear Phishing </h5>
+                    <p>
+                      "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers
+                      can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
+
+                    </p>
+                </div>
+
+                <div class="card card-block">
+                   <h5>Privacy</h5>
                    <p>
                    Disclosing personal information on the internet can have devastating effects. Social networks can provide attackers
                    with information such as full name, DOB, hometown, relationship information, education, graduation dates, pet names,
                    interests, hobbies, and affiliations. This information can be used in a spear phishing attack to gain further
                    information about a target, as well as crafting targeted password attacks.
-                   <br/>
-                   <br/>
-                   There is a shocking amount of information publicly available. Knowing someone's name and location
+                   <br/><br/>
+                   Some tips to keep your information safe and out of the hands of attackers:
+                   <ul>
+                     <li>Be mindful of how much personal information you share on social networks.</li>
+                     <li>Dispose of old computers and phones (any device with data) securely.</li>
+                     <li>For password security verification questions, us a password for all answers. The answers to most security questions are things that an attacker can find out about you.</li>
+                   </ul>
+
+                   There is a shocking amount of information available online. Knowing someone's name and location
                    is often all you need to find specific details about someone. Type your first and last name into the
                    form below to see if we can find information about you.
                   </p>
@@ -183,7 +198,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="static/js/tether.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
